fix overflow bag

--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,7 @@ img {
 
 .overflowHidden{
 	overflow: hidden;
+	height: 100%;
 }
 .burger{
 	display: none;
